[DTSSTCI-1422] update edit and create draft order tests